--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -15,9 +16,11 @@
     "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.2",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
+    "crypto-js": "^4.1.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "postcss": "^8.4.4",
