--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
-    
     "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
@@ -21,6 +20,7 @@
     "@types/crypto-js": "^4.0.2",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
     "crypto-js": "^4.1.1",
     "eslint": "7.32.0",
