--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "axios": "^0.24.0",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.44.0",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.2",
+    "@types/next": "^9.0.0",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "@types/react-dom": "^17.0.11",
